--- a/rsm/css/style.css
+++ b/rsm/css/style.css
@@ -122,7 +122,7 @@ button {
 .wrapper {
     height: 100%;
 
-    padding-top: 210px;
+    padding-top: 196px;
     box-sizing: border-box;
     grid-template-rows: 1fr auto;
 }
@@ -140,27 +140,27 @@ button {
     gap: 32px;
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 900px) {
     .wrapper {
-        padding-top: 178px;
+        padding-top: 204px;
     }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 800px) {
     .wrapper {
-        padding-top: 172px;
+        padding-top: 244px;
+    }
+}
+
+@media (max-width: 631px) {
+    .wrapper {
+        padding-top: 248px;
     }
 }
 
 @media (max-width: 600px) {
     .wrapper {
-        padding-top: 174px;
-    }
-}
-
-@media (max-width: 370px) {
-    .wrapper {
-        padding-top: 216px;
+        padding-top: 240px;
     }
 }
 
@@ -404,7 +404,14 @@ h3 {
 }
 
 .header:nth-child(2) {
-    top: 140px;
+    position: absolute;
+
+    top: 113px;
+}
+
+.header:nth-child(2) .header__wrapper {
+    grid-template-columns: 1fr 1.5fr;
+    gap: 48px;
 }
 
 .header__wrapper {
@@ -429,10 +436,6 @@ h3 {
 .header__logo {
     height: 50px;
     width: auto;
-}
-
-.header__nav-area {
-    gap: 12px;
 }
 
 .header__search {
@@ -568,7 +571,9 @@ h3 {
 
 .header__sub-menu-elem svg {
     height: 28px;
+    min-height: 28px;
     width: auto;
+    min-width: fit-content;
 
     fill: var(--main);
 }
@@ -578,10 +583,6 @@ h3 {
 }
 
 @media (max-width: 1150px) {
-    .header:nth-child(2) {
-        top: 110px;
-    }
-
     .header__action {
         display: grid;
 
@@ -636,6 +637,23 @@ h3 {
     }
 }
 
+@media (max-width: 1000px) {
+    .header:nth-child(2) .header__wrapper {
+        gap: 32px;
+    }
+
+    .header__sub-menu {
+        gap: 28px;
+    }
+}
+
+@media (max-width: 800px) {
+    .header:nth-child(2) .header__wrapper {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+}
+
 @media (max-width: 760px) {
     .header__wrapper {
         gap: 20px;
@@ -646,7 +664,7 @@ h3 {
     }
     
     .header__sub-menu {
-        gap: 32px;
+        gap: 24px;
     }
 
     .header__sub-menu-elem svg {
@@ -664,7 +682,7 @@ h3 {
     }
 
     .header__sub-menu {
-        gap: 24px;
+        gap: 20px;
     }
 }
 
@@ -706,11 +724,11 @@ h3 {
     }
 
     .mobile-nav {
-        top: 104px;
+        top: 96px;
     }
 
     .mobile-nav.open {
-        top: 112px;
+        top: 104px;
     }
 
     .header__right-area {
@@ -727,20 +745,9 @@ h3 {
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 370px) {
     .header__logo {
         display: none;
-    }
-}
-
-@media (max-width: 370px) {
-    .header:nth-child(1) .header__wrapper {
-        flex-direction: column;
-        align-items: start;
-    }
-
-    .header:nth-child(2) {
-        top: 144px;
     }
 
     .header__left-area {
@@ -749,10 +756,6 @@ h3 {
 
     .header__nav-area {
         width: 100%;
-    }
-
-    .header__right-area {
-        grid-auto-flow: column;
     }
 }
 
